examples/errors/17_invalid_until_condition/invalid_until_condition.txy
proc main()
    println("=================== PROBLEMA 02 ===================");
    println("Informe quantos números desejar, forneça um negativo para finalizar");
    println("===================================================");

    var array: int[] = new int[];
    var size: int = 0;
    repeat
        print("Próximo número: ");
        var key: int = int(input_line());
        if key >= 0 then
            var temp: int[] = new int[1]{key};
            array = array << temp;
            delete(&temp);
        endif;
    until key;
endproc;
